feat-13: add jwt-auth
